--- a/mysite/news/templates/news/news_detail.html
+++ b/mysite/news/templates/news/news_detail.html
@@ -6,10 +6,16 @@
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ object.author }}</a>
             <small class="text-muted">{{ object.date_posted }}</small>
+            {% if object.author == user %}
+            <div>
+                <a class="btn btn-secondary btn-sm mt-1 mb-1"href="{% url 'news:update' object.id %}">Update</a>
+                <a class="btn btn-danger btn-sm mt-1 mb-1"href="{% url 'news:delete' object.id %}">Delete</a>
+            </div>
+              {% endif %}
         </div>
         <h2><a class="article-title" href="#">{{ object.title }}</a></h2>
         <!-- картинка-->
-        <img src="#" alt="" class="rounded-circle artcile-img">
+        <img src="{{ object.thumb.url }}" alt="" class="rounded-circle artcile-img">
         <p class="article-content">{{ object.content }}</p>
         </div>
     </article>
