--- a/mysite/news/templates/news/news_delete.html
+++ b/mysite/news/templates/news/news_delete.html
@@ -8,8 +8,8 @@
             <h2>Are you sure you want to delete the post? {{object.title}} </h2>
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Yes, Delete</button>
-            <button class="btn btn-outline-secondary" href="{% url 'news:detail' object.id %}" >Cancel</button>
+            <a class="btn btn-outline-info" type="submit">Yes, Delete</a>
+            <a class="btn btn-outline-secondary" href="{% url 'news:detail' object.id %}" >Cancel</a>
         </div>
     </form>
 </div>
