--- a/mysite/news/templates/news/news_detail.html
+++ b/mysite/news/templates/news/news_detail.html
@@ -6,7 +6,7 @@
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ new.author }}</a>
             <small class="text-muted">{{ new.date_posted }}</small>
-            {% if new.author == user %}
+            {% if new.author == user or user.is_superuser %}
             <div>
                 <a class="btn btn-secondary btn-sm mt-1 mb-1"href="{% url 'news:update' new.id %}">Update</a>
                 <a class="btn btn-danger btn-sm mt-1 mb-1"href="{% url 'news:delete' new.id %}">Delete</a>
@@ -28,10 +28,10 @@
         </div>
         {% for comment in comments %}
         <div>
-            {% if comment.author == user %}
+            {% if comment.author == user or user.is_superuser%}
             <div>
                 <a class="btn btn-secondary btn-sm mt-1 mb-1"href="{% url 'news:comment_update' pk=comment.id %}">Update</a>
-                <a class="btn btn-danger btn-sm mt-1 mb-1"href="{% url 'news:com_del' pk=new.id comment=comment.id%}">Delete</a>
+                <a class="btn btn-danger btn-sm mt-1 mb-1"href="{% url 'news:comment_delete' pk=new.id comment=comment.id%}">Delete</a>
             </div>
             {% endif %}
           <p>{{comment.author}}</p>
