--- a/mysite/news/templates/news/home.html
+++ b/mysite/news/templates/news/home.html
@@ -2,7 +2,7 @@
 {% block content %}
     {% for new in news %}
         <article class="media content-section">
-        <img src="{{ new.author.image.url }}" alt="" class="rounded-circle artcile-img">
+        <img src="{{ new.author.image.url }}" alt="" class="rounded-circle account-img">
           <div class="media-body">
             <div class="article-metadata">
               <a class="mr-2" href="#">{{ new.author }}</a>
