--- a/mysite/news/templates/news/news_detail.html
+++ b/mysite/news/templates/news/news_detail.html
@@ -33,7 +33,7 @@
                                 <td><div class="comment-user">{{comment.author}}</div></td>
                                 <td>
                                 <div class="comment-avatar">
-                                    <img src="{{comment.author.image.url}}" class="rounded-circle"">
+                                    <img src="{{comment.author.image.url}}" class="rounded-circle">
                                 </div>
                                 </td>
                                 {% if comment.author == user or user.is_superuser %}
