--- a/mysite/news/templates/news/news_update.html
+++ b/mysite/news/templates/news/news_update.html
@@ -9,7 +9,7 @@
             {{ form|crispy }}
         </fieldset>
         <div class="form-group">
-            <button class="btn btn-outline-danger" type="submit">Sign Post</button>
+            <button class="btn btn-outline-info" type="submit">Sign Post</button>
         </div>
     </form>
 </div>
