--- a/mysite/profiles/templates/profiles/profile.html
+++ b/mysite/profiles/templates/profiles/profile.html
@@ -16,10 +16,21 @@
                 <button class="btn btn-outline-info" type="submit">Update</button>
             </div>
         </form>
+        <form method="POST" enctype="multipart/form-data" action="password">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Change Password</legend>
+                {{ form_p|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Update</button>
+            </div>
+        </form>
     </div>
+    
     <div class="col-md-4">
         <legend class="border-bottom mb-4">Profile Info</legend>
-        <p>Your username: {{user}}</p>
+        <p>Your username: {{user.username}}</p>
         <p>Your email: {{user.email}}</p>
         <p>Your profile image: </p>
         <img src="{{user.image.url}}" class="account-img">
