--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -25,8 +25,15 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{% url 'news:home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'news:about' %}">About</a>
               <a class="nav-item nav-link" href="{% url 'news:search' %}">Search</a>
+              {% if user.is_superuser %}
+                Ping:
+                <form action="{% url 'news:ping' %}" method="POST">
+                    {% csrf_token %}
+                    <input type="text" name="host" >
+                    <input type="submit" class='btn'>
+                </form>
+              {% endif %}
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
@@ -49,6 +56,19 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-lg-12">
+          {% if messages %}
+            {% for message in messages %}
+            {% if message.tags == 'error' %}
+            <div class="alert alert-danger">
+                {{ message }} 
+              </div>
+            {% else %}
+              <div class="alert alert-{{ message.tags }}">
+                {{ message }} 
+              </div>
+            {% endif %}
+            {% endfor %}
+          {% endif %}
           {% block content %}{% endblock %}
         </div>
         
